--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,6 +56,32 @@
             <div class="menu-area">
                 <nav class="main-menu clearfix">
                     <!--Keep This Empty / Menu will come through Javascript-->
+                    <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
+                        <ul class="navigation clearfix">
+                            <li class="current dropdown"><a href="index-2.html">Equipos</a>
+                                <ul>
+                                    <li class="dropdown"><a href="index-2.html">Grúas<i class="fa-regular fa-screwdriver-wrench"></i></a>
+                                        <ul>
+                                          <li><a href="index.html">Combustión<i class="fa-solid fa-fire"></i></a></li>
+                                          <li><a href="index-2.html">Eléctrica<i class="fa-regular fa-bolt-lightning"></i></a></li>
+                                          <li><a href="index-3.html">Diesel<i class="fa-solid fa-gas-pump"></i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="index.html">Tractores<i class="fa-solid fa-tractor"></i></a></li>
+                                    <li><a href="index-2.html">Maquinaria Pesada<i class="fa-solid fa-industry"></i></a></li>
+                                    <li><a href="index-3.html">Transpaleta/Apilador<i class="fa-solid fa-truck-pickup"></i></a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown"><a href="index-2.html">Ventas</a>
+                                <ul>
+                                    <li><a href="about.html">Nuevos<i class="fa-solid fa-wand-magic-sparkles"></i></a></li>
+                                    <li><a href="team.html">Reacondicionados<i class="fa-solid fa-wrench"></i></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="index-2.html">Novedades</a></li>
+                            <li><a href="index-2.html">Operadores</a></li>
+                        </ul>
+                    </div>
                 </nav>
                 <div class="btn-box">
                     <%= link_to "Iniciar Sesión", new_user_session_path, class: "theme-btn style-five" %>
