--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
                             <ul class="navigation clearfix">
                                 <li class="current dropdown"><a href="index-2.html">Equipos</a>
                                     <ul>
-                                        <li class="dropdown"><a href="index-2.html">Grúas<i class="fa-regular fa-screwdriver-wrench"></i></a>
+                                        <li class="dropdown"><%= link_to "Grúas<i class='fa-regular fa-screwdriver-wrench'></i>".html_safe, gruas_path %>
                                             <ul>
                                               <li><a href="index.html">Combustión<i class="fa-solid fa-fire"></i></a></li>
                                               <li><a href="index-2.html">Eléctrica<i class="fa-regular fa-bolt-lightning"></i></a></li>
