--- a/app/assets/stylesheets/application_landing.scss
+++ b/app/assets/stylesheets/application_landing.scss
@@ -1,1 +1,6 @@
 @import "pages/landing/css/*";
+
+@import "config/fonts";
+@import "config/colors";
+@import "config/bootstrap_variables";
+@import "components/index";
