--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,7 +49,7 @@
             <%= link_to "Venta de equipos",ventos_path ,class: "btn-flat-rojo" %>
           </li>
           <li  style="font-size:20px;color:$azul_skl!;">
-        <%= link_to "Novedades", novedads_path, class: "btn-flat" %>
+        <%= link_to "Novedades", novedades_path, class: "btn-flat" %>
           </li>
           <li  style="font-size:20px;color:$azul_skl!;">
             <%= link_to "Login", new_user_session_path, class: "btn-flat" %>
