--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -10,18 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bc8f5ce769.js" crossorigin="anonymous"></script>
 
-    <!-- Stylesheets -->
-    <%= stylesheet_link_tag "application_landing", "data-turbo-track": "reload" %>
-
-    <!-- Javascript -->
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= stylesheet_link_tag "application_landing", "data-turbo-track": "reload" %>
   </head>
 
   <body class="boxed_wrapper">
+    <%= render "shared/navbar" %>
     <div data-controller="landing">
-    <a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información!" target="_blank">
-      <i class="fa-brands fa-whatsapp whatsapp-button"></i>
-    </a>
+      <a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información!" target="_blank">
+        <i class="fa-brands fa-whatsapp whatsapp-button"></i>
+      </a>
       <%= yield %>
     </div>
   </body>
