--- a/app/views/novedads/index.html.erb
+++ b/app/views/novedads/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h1>Novedades</h1>
   <div class="cards">
     <% @novedades.each do |novedad|  %>
       <div class="card-trip img-fluid">
