--- a/app/views/maquinariapesadas/index.html.erb
+++ b/app/views/maquinariapesadas/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h1>Maquinaria Pesada</h1>
   <div class="cards">
     <% @maquinariapesadas.each do |maquinariapesada|  %>
       <div class="card-trip img-fluid">
