--- a/app/views/repuestos/index.html.erb
+++ b/app/views/repuestos/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h1>Repuestos</h1>
   <div class="cards">
     <% @repuestos.each do |repuesto|  %>
       <div class="card-trip img-fluid">
