--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h1>Tractores</h1>
   <div class="cards">
     <% @tractors.each do |tractor|  %>
       <div class="card-trip img-fluid">
