--- a/app/views/ventos/index.html.erb
+++ b/app/views/ventos/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <h1>Ventos</h1>
   <div class="cards">
     <% @ventos.each do |vento|  %>
       <div class="card-trip img-fluid">
