all links and pages working well

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer" style="position: relative; bottom: 0; width: 100%; height: 100px; background-color: #1a1a1a; color: white; text-align: center; margin-top: 100px;">
+<div class="footer" style="width: 100%; height: 100px; background-color: #1a1a1a; color: white; text-align: center;">
   <div class="footer-links">
     <a href="https://www.instagram.com/Skl.ig/"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/Skl"><i class="fab fa-facebook"></i></a>
