--- a/app/views/novedads/index.html.erb
+++ b/app/views/novedads/index.html.erb
@@ -5,10 +5,9 @@
       <div class="card-trip img-fluid">
         <%= cl_image_tag(novedad.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
         <div class="card-trip-infos">
-          <a><%= link_to " #{novedad.titulo}"  , novedad_path(novedad) %></a>
+          <a><%= link_to " #{novedad.titulo}"  , novedads_path(novedad) %></a>
           <p> Descripcion: <%= novedad.descripcion %></p>
           <p></p>
-          <a href="<%= novedad.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
         </div>
       </div>
     <% end %>
