fiish stylyng missing links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,7 +108,7 @@
                             </div>
                             <div class="count-box wow zoomIn animated" data-wow-delay="00ms" data-wow-duration="1500ms"><span>01</span></div>
                             <div class="content-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
-                                <h4><a href="index-2.html">Tus necesidades importan</a></h4>
+                                <h4><a class="text-decoration-none">Tus necesidades importan</a></h4>
                                 <p>Nos aseguramos día a día de brindar un servicio impecable que este a la altura de nuestros clientes.</p>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                             </div>
                             <div class="count-box wow zoomIn animated" data-wow-delay="200ms" data-wow-duration="1500ms"><span>02</span></div>
                             <div class="content-box wow slideInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
-                                <h4><a href="index-2.html">Tendrás equipos de calidad</a></h4>
+                                <h4><a class="text-decoration-none">Tendrás equipos de calidad</a></h4>
                                 <p>Mantener un equipo de trabajo e infraestructura que asegure un servicio de primer nivel.</p>
                             </div>
                         </div>
@@ -139,7 +139,7 @@
                             </div>
                             <div class="count-box wow zoomIn animated" data-wow-delay="400ms" data-wow-duration="1500ms"><span>03</span></div>
                             <div class="content-box wow slideInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
-                                <h4><a href="index-2.html">Analizamos y Optimizamos</a></h4>
+                                <h4><a class="text-decoration-none">Analizamos y Optimizamos</a></h4>
                                 <p>Incorporar nuevas tecnologías y mecanismos de trabajo más eficientes y rápidos.</p>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="more-btn wow slideInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
-              <%= link_to "<i class='fa-solid fa-paint-roller'></i>Comenzar ahora".html_safe, new_user_registration_path, class: "theme-btn style-five" %>
+              <%= link_to "<i class='fa-solid fa-paint-roller'></i>Comenzar ahora".html_safe, new_user_registration_path, class: "theme-btn style-five text-decoration-none" %>
             </div>
         </div>
     </div>
