--- a/app/views/maquinariapesadas/show.html.erb
+++ b/app/views/maquinariapesadas/show.html.erb
@@ -8,6 +8,7 @@
       <a href="<%= @maquinariapesada.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
       <p style="font-size: 14px;margin-bot: 12px;"><%= @maquinariapesada.disponible %></p>
     </div>
+    <%= render 'shared/skl_info' %>
   </div>
   <div class="card-product" style="margin-top: 16px;margin-left: 16px;padding: 12px;">
   <h3 h2 style="font-size:24px"> Descripcion: </h3>
