--- a/app/views/gruas/show.html.erb
+++ b/app/views/gruas/show.html.erb
@@ -1,4 +1,3 @@
-<div class="container-fluid">
 <div class="container" style="  display: flex;justify-content: center;">
   <div class="card-product" style="margin-top: 16px;">
     <%= cl_image_tag @grua.photo.key, height: 600, width: 800, crop: :fill %>
@@ -7,6 +6,10 @@
       <h2 style="font-size: 18px"><%= @grua.marca %></h2>
       <a href="<%= @grua.link.to_s%>" style="font-size: 16px">Ficha tecnica </a>
       <p style="font-size: 14px;margin-bot: 12px;"><%= @grua.disponible %></p>
+    </div>
+    <%= render 'shared/skl_info' %>
+    <div>
+
     </div>
   </div>
   <div class="card-product" style="margin-top: 16px;margin-left: 16px;padding: 12px;">
