--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <div class="d-flex flex-column">
       <%= render "shared/navbar" %>
-      <a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información!" target="_blank">
+      <a href="https://wa.me/56987550756?text=Hola!%20Me%20gustaría%20recibir%20información%20de%20SKL!" target="_blank">
         <i class="fa-brands fa-whatsapp whatsapp-button"></i>
       </a>
       <div class="container" style="margin-top: 120px; margin-bottom: 200px;">
