servicio con operadores page finished

--- a/app/views/pages/operadores.html.erb
+++ b/app/views/pages/operadores.html.erb
@@ -1,1 +1,19 @@
-<h1>Operadores</h1>
+<div class="d-flex justify-content-center align-items-center" style="height: 100vh; margin-top: 70px;">
+  <div class="container text-center">
+    <!-- Your content will go here -->
+    <h1 class="display-3">Servicio con operadores</h1>
+    <h2 class="display-4">"Una fuerza que Crece"</h2>
+    <p class="lead">Contamos con servicio de operador para todos nuestros Equipos.
+    Tenemos operadores certificados y con su documentación vigente</p>
+
+    <p class="lead">Un manejo eficiente y seguro es clave para un buen rendimiento, un buen operador permite ahorrar horas de trabajo, combustible, evita accidentes y mantienen el equipo en buenas condiciones.</p>
+
+    <p class="lead">Si quieres cotizar tu equipo con operador, envía tu requerimiento al siguiente correo: <a href="mailto:Ventas@sklmaquinarias.cl">Ventas@sklmaquinarias.cl</a>, especificando equipo y plazo aproximado de uso.</p>
+
+    <div class="d-flex justify-content-center align-items-center">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1ZQ2QY4Z1qM" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
