--- a/app/views/pages/operadores.html.erb
+++ b/app/views/pages/operadores.html.erb
@@ -12,7 +12,7 @@
 
     <div class="d-flex justify-content-center align-items-center">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1ZQ2QY4Z1qM" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RNxNewwtdW0?start=35&autoplay=1&controls=0&rel=0&modestbranding=1" allowfullscreen></iframe>
       </div>
     </div>
   </div>
