link in homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,10 +73,10 @@
                         <div class="lower-box">
                             <div class="icon-box">
                                 <div class="bg-box" style="background-image: url(/assets/landing_images/icons/icon-bg-3.png);"></div>
-                                <i class="flaticon-brain-2"></i>
+                                <i class="fa-solid fa-helmet-safety"></i>
                             </div>
-                            <h5>Impressive Works Since 2010</h5>
-                            <a href="about.html"><i class="flaticon-next"></i>More About Us</a>
+                            <h5>Compromiso con los operadores</h5>
+                            <a href="/operadores">"Una fuerza que crece"</a>
                         </div>
                     </div>
                 </div>
