--- a/app/views/gruas/shared/_card.html.erb
+++ b/app/views/gruas/shared/_card.html.erb
@@ -1,8 +1,8 @@
 <div class="cards">
   <% @gruas.where(category: category).each do |grua|  %>
-    <div class="card-trip img-fluid">
-    <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
-    <div class="card-trip-infos">
+    <div class="card-trip img-fluid item-animate">
+      <%= cl_image_tag(grua.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
+      <div class="card-trip-infos">
         <a><%= link_to " #{grua.modelo}"  , grua_path(grua) %></a>
         <p> Marca: <%= grua.marca %></h2>
         <p> disponibilidad: <%= grua.disponible %></h6>
