--- a/app/views/maquinariapesadas/index.html.erb
+++ b/app/views/maquinariapesadas/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Maquinaria Pesada</h1>
   <div class="cards">
     <% @maquinariapesadas.each do |maquinariapesada|  %>
-      <div class="card-trip img-fluid">
+      <div class="card-trip img-fluid item-animate">
         <%= cl_image_tag(maquinariapesada.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
         <div class="card-trip-infos">
           <a><%= link_to " #{maquinariapesada.modelo}"  , maquinariapesada_path(maquinariapesada) %></a>
