--- a/app/views/novedads/index.html.erb
+++ b/app/views/novedads/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Novedades</h1>
   <div class="cards">
     <% @novedades.each do |novedad|  %>
-      <div class="card-trip img-fluid">
+      <div class="card-trip img-fluid item-animate">
         <%= cl_image_tag(novedad.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
         <div class="card-trip-infos">
           <a><%= link_to " #{novedad.titulo}"  , novedads_path(novedad) %></a>
