--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -44,9 +44,8 @@
                     <div class="btn-box">
                       <% if current_user %>
                         <%= button_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "theme-btn style-five text-decoration-none" %>
-                      <% else %>
-                        <%= link_to "Iniciar Sesión", new_user_session_path, class: "theme-btn style-five text-decoration-none" %>
                       <% end %>
+                      <a href="#procesos" class="theme-btn style-five text-decoration-none">Nuestros procesos</a>
                     </div>
                 </div>
             </div>
@@ -90,9 +89,8 @@
                 <div class="btn-box">
                   <% if current_user %>
                     <%= button_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "theme-btn style-five text-decoration-none" %>
-                  <% else %>
-                    <%= link_to "Iniciar Sesión", new_user_session_path, class: "theme-btn style-five text-decoration-none" %>
                   <% end %>
+                  <a href="#procesos" class="theme-btn style-five text-decoration-none">Nuestros procesos</a>
                 </div>
             </div>
         </div>
