--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Tractores</h1>
   <div class="cards">
     <% @tractors.each do |tractor|  %>
-      <div class="card-trip img-fluid">
+      <div class="card-trip img-fluid item-animate">
         <%= cl_image_tag(tractor.photo.key,:aspect_ratio=>"1.0", width: 350, height: 300,:crop=>"fill") %>
         <div class="card-trip-infos">
           <a><%= link_to " #{tractor.modelo}"  , tractor_path(tractor) %></a>
